Noteworthy changes in version 1.4.1 (unreleased) [C20/A12/R_]
------------------------------------------------


Noteworthy changes in version 1.4.0 (2020-05-19) [C20/A12/R0]
------------------------------------------------

 * Supports ECDSA and EdDSA certificate creation and parsing.  [#4896]

 * Supports ECDH enveloped data.  [#4920]

 * Supports ECDSA and EdDSA signed data.  [#4920]

 * Supports rsaPSS signature verification.  [#4538]

 * Supports standard file descriptors in ksba_reader_read. [#3072]

 * New configure flag --disable-doc.

 * Improves supports for reproducible builds.  [#4801]

 * Allows for optional elements in keyinfo objects.  [#4892]

 * Updates the config and M4 scripts to the latest version.

 * Fixes error detection in the CMS parser.  [#4207]

 * Fixes memory leak in ksba_cms_identify.

 * Fixes build warnings on macOS.  [#2910]

 * Uses --disable-new-dtags if LD_LIBRARY_PATH is defined.  [#4298]

 * New constants KSBA_VERSION and KSBA_VERSION_NUMBER.

 * New API to make creation of DER objects easy.

 * Interface changes relative to the 1.3.5 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 KSBA_VERSION                     NEW.
 KSBA_VERSION_NUMBER              NEW.
 KSBA_CT_SPC_IND_DATA_CTX         NEW.
 KSBA_CLASS_*                     NEW.
 KSBA_TYPE_*                      NEW.
 ksba_der_t                       NEW.
 ksba_der_release                 NEW.
 ksba_der_builder_new             NEW.
 ksba_der_builder_reset           NEW.
 ksba_der_add_ptr                 NEW.
 ksba_der_add_val                 NEW.
 ksba_der_add_int                 NEW.
 ksba_der_add_oid                 NEW.
 ksba_der_add_bts                 NEW.
 ksba_der_add_der                 NEW.
 ksba_der_add_tag                 NEW.
 ksba_der_add_end                 NEW.
 ksba_der_builder_get             NEW.

 Release-info: https://dev.gnupg.org/T4943


Noteworthy changes in version 1.3.5 (2016-08-22) [C19/A11/R6]