@@ -84,6 +84,8 @@ static struct {
   {  "1.2.840.113549.1.9.16.1.2", KSBA_CT_AUTH_DATA   },
   {  "1.3.6.1.4.1.311.2.1.4", KSBA_CT_SPC_IND_DATA_CTX,
      ct_parse_data   , ct_build_data                  },
+  {  "1.3.6.1.4.1.11591.2.3.1", KSBA_CT_OPENPGP_KEYBLOCK,
+     ct_parse_data   , ct_build_data                  },
   { NULL }
 };
 
